Upgrade to Gradle 7 + Java modules