@@ -1,21 +1,27 @@
 plugins {
   id 'java-library'
   id 'checkstyle'
-  // Doesn't work with Java 16
-  //id 'net.ltgt.errorprone' version '1.3.0'
+  id 'net.ltgt.errorprone' version '2.0.1'
+  id 'org.cadixdev.licenser' version '0.6.1'
+  id 'maven-publish'
+  id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
 }
 
 group 'me.hugmanrique'
-version '0.0.1-SNAPSHOT'
+version '0.0.2-SNAPSHOT'
 
 ext {
-  junitVersion = '5.7.0'
-  incubatorArgs = ['--add-modules', 'jdk.incubator.foreign']
+  junitVersion = '5.7.2'
 }
 
 java {
-  modularity.inferModulePath = true
-  toolchain.languageVersion = JavaLanguageVersion.of(16)
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(16)
+  }
+}
+
+license {
+  header = file('HEADER.txt')
 }
 
 repositories {
@@ -23,20 +29,13 @@ repositories {
 }
 
 dependencies {
-  compileOnlyApi 'org.checkerframework:checker-qual:3.8.0'
-  //errorprone 'com.google.errorprone:error_prone_core:2.5.1'
+  compileOnlyApi 'org.checkerframework:checker-qual:3.15.0'
+  errorprone 'com.google.errorprone:error_prone_core:2.7.1'
   testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
-  testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
-}
-
-tasks.withType(JavaCompile).configureEach {
-  options.compilerArgs += incubatorArgs
-  //// https://github.com/google/error-prone/issues/1647
-  //options.errorprone.disable('UnnecessaryParentheses')
+  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
 
 checkstyle {
-  toolVersion = '8.38'
   // Fail build if there's any violations
   maxErrors = 0
   maxWarnings = 0
@@ -44,5 +43,18 @@ checkstyle {
 
 test {
   useJUnitPlatform()
-  jvmArgs += incubatorArgs
+}
+
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      from(components.java)
+    }
+  }
+}
+
+nexusPublishing {
+  repositories {
+    sonatype()
+  }
 }
